# DBus_native

./: .gitignore  .gitmodules  CMakeLists.txt  DBus.pro  README.md  build.sh  run.sh
Adapter/: Adapter.pro  CMakeLists.txt  DataHMI.qrc  abc.xml  controller.xml  main.cpp  main.qml  sample.xml
Adapter/Controller/: controller.cpp  controller.h
Adapter/ServiceProvider/: ServiceProvider.cpp  ServiceProvider.h
Interfaces/: CMakeLists.txt  DataHMI.qrc  Interfaces.pro  controller.xml  main.cpp  main.qml
Interfaces/Interfaces/: Consumers.cpp  Consumers.h
Proxy/: Data.h  Init.cpp  Init.h  Proxy.pro  ServiceAdapter.cpp  ServiceAdapter.h  ServiceInterface.cpp  ServiceInterface.h
